Fix for GTD-24 Project View > Gantt View Adding table is not responsive beyond certain amount. Data hides.

--- a/src/components/Layout/Sidebar/Sidebar.css
+++ b/src/components/Layout/Sidebar/Sidebar.css
@@ -5,10 +5,10 @@
     overflow: scroll initial;
     background-color: #333; */
     display: flex;
-    /* position: fixed; */
+    position: fixed;
     /* overflow: scroll initial; */
     left: 0;
-    top: 0;
+    /* top: 0; */
     height: 100vh;
     width: 240px;
     background: #11101d;
